refactor: use locale-aware string methods